<resources>
    <string name="app_name">ApllicationGithubUser</string>
    <string name="q_following">following</string>
    <string name="q_followers">followers</string>
    <string name="r_following">0</string>
    <string name="r_followers">0</string>
    <string name="t_setting">Setting</string>
    <string name="username_hint">Masukkan Username</string>
    <string name="_12">12</string>
    <string name="followers">followers</string>
    <string name="nama_detail">Your Name</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="r_username">username</string>
    <string name="re_status">status</string>
    <string name="task_progress">Sedang Loading</string>
    <string name="task_completed">Completed</string>
    <string name="loading">Compresssing %d %%</string>
    <string name="user_not_found">User not Found</string>
    <string name="btn_kirim">Kirim</string>
    <string name="t_favorite">Favorite</string>

    <string name="m_dark">Dark Mode</string>
    <string name="t_theme">theme</string>

    <string name="add">Menambahkan favorite</string>
    <string name="delete">Menghapus favorite</string>
</resources>